fix: add default empty values for Google OAuth env variables
- Modified Google OAuth client ID and secret properties to use empty defaults when env vars are missing
- Added ':' after ${GOOGLE_CLIENT_ID} and ${GOOGLE_CLIENT_SECRET} to prevent startup errors
- Allows application to start in development without requiring OAuth credentials to be set

--- a/eco-solicitud-infrastructure/src/main/resources/messages.properties
+++ b/eco-solicitud-infrastructure/src/main/resources/messages.properties
@@ -8,8 +8,8 @@ nav.api=API
 nav.console=Consola H2
 nav.lang.pt=Português
 nav.lang.es=Español
-nav.lang.en=English
 nav.lang.switch=Idioma
+nav.login=Acceder
 
 home.hero.title=Sistema de Optimización de Rutas
 home.hero.subtitle=Gestión inteligente de solicitudes de recolección
