--- a/eco-solicitud-infrastructure/src/main/resources/messages_pt.properties
+++ b/eco-solicitud-infrastructure/src/main/resources/messages_pt.properties
@@ -8,8 +8,8 @@ nav.api=API
 nav.console=Console H2
 nav.lang.pt=Português
 nav.lang.es=Español
-nav.lang.en=English
 nav.lang.switch=Idioma
+nav.login=Acessar
 
 home.hero.title=Sistema de Otimização de Rotas
 home.hero.subtitle=Gestão inteligente das solicitações de coleta
