--- a/eco-solicitud-infrastructure/src/main/resources/messages_es.properties
+++ b/eco-solicitud-infrastructure/src/main/resources/messages_es.properties
@@ -8,8 +8,8 @@ nav.api=API
 nav.console=Consola H2
 nav.lang.pt=Português
 nav.lang.es=Español
-nav.lang.en=English
 nav.lang.switch=Idioma
+nav.login=Acceder
 
 home.hero.title=Sistema de Optimización de Rutas
 home.hero.subtitle=Gestión inteligente de solicitudes de recolección
